--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -23,7 +23,7 @@
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="template/login.html">LOGIN</a></li>
               <li class="main-nav__item"><a href="template/contact.html">CONTACT</a></li>
-              <li class="main-nav__item"><a href="template/form.html">SIGN UP</a></li>
+              <li class="main-nav__item"><a href="https://client.cryptologi.com/en/members/register/real/">LOG UP</a></li>
             </ul>
           </nav>
         </div>
@@ -36,7 +36,7 @@
         <div class="flex-btn">
           <h1 class="info__title">Cryptologi the science of<br>trading cryptocurrency</h1>
           <p class="info__text">Cryptologi presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
-          <a class="info__link" href="template/form.html">Create Account</a>
+          <a class="info__link" href="https://client.cryptologi.com/en/members/register/real/">Create Account</a>
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@
         <p class="trading__text">Cryptologi provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with Cryptologi and move on the path to success.</p>
       </div>
       <div class="trading__flex-container  trading__flex-container--m">
-        <a class="info__link  info__link--red" href="template/form.html">Create Account</a>
+        <a class="info__link  info__link--red" href="https://client.cryptologi.com/en/members/register/real/">Create Account</a>
       </div>
     </div>
   </section>
@@ -171,17 +171,17 @@
           <b>Account</b>
           <ul>
             <li><a href="template/login.html">Log In</a></li>
-            <li><a href="template/form.html">Sign Up</a></li>
+            <li><a href="https://client.cryptologi.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>About</b>
           <ul>
             <li><a href="template/about.html">About Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Press</a></li>
+            <li><a href="template/careers.html">Careers</a></li>
+            <li><a href="template/press.html">Press</a></li>
             <li><a href="template/contact.html">Contact</a></li>
-            <li><a href="#">Security</a></li>
+            <li><a href="template/security.html">Security</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
