--- a/assets/templates/crypto/template/legal.html
+++ b/assets/templates/crypto/template/legal.html
@@ -23,7 +23,7 @@
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="login.html">LOGIN</a></li>
               <li class="main-nav__item"><a href="contact.html">CONTACT</a></li>
-              <li class="main-nav__item"><a href="form.html">LOG UP</a></li>
+              <li class="main-nav__item"><a href="https://client.cryptologi.com/en/members/register/real/">LOG UP</a></li>
             </ul>
           </nav>
         </div>
@@ -83,17 +83,17 @@
           <b>Account</b>
           <ul>
             <li><a href="login.html">Log In</a></li>
-            <li><a href="form.html">Sign Up</a></li>
+            <li><a href="https://client.cryptologi.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="careers.html">Careers</a></li>
             <li><a href="#">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Security</a></li>
+            <li><a href="security.html">Security</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
