--- a/assets/templates/crypto/template/security.html
+++ b/assets/templates/crypto/template/security.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>FAQ - Cryptologi</title>
+  <title>About Us - Cryptologi</title>
   <link rel="stylesheet" href="../css/fastyle.css">
   <link rel="stylesheet" href="../css/adaptivee.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
@@ -30,30 +30,29 @@
       </div>
     </div>
   </header>
-  <main class="page-main  page-main--faq">
+  <main class="page-main  page-main--careers">
     <div class="container">
       <div class="container__adv  container__adv--pm">
-        <h1>Faq</h1>
-        <p class="page-main__title">Account FAQ</p>
-        <p class="page-main__title">How to open a Cryptologi trade account?</p>
-        <p>It is easy and secure to open a Cryptologi account. Initially, you can choose to open a practice, free demo account. However, if you’re ready to trade, you can make a deposit and open a Live Account. Based on how you would like to fund your account, there are three types of account available, but once you begin trading, there is the option to move from one account type to another.</p>
-        <p>You will need to fill out a short registration form for any Live Account that you want to open. Legal documentation is required by regulation in order to provide proof of your identity. As soon as your identity has been confirmed, all you need to do is download the platform you want to trade on, make a deposit to fund your account, and then you’re ready to start trading.</p>
-        <p class="page-main__title">Which types of accounts are available?</p>
-        <p>Three kinds of accounts are offered by Cryptologi:</p>
-        <p><b>Mini Account</b> – beginning at $500 USD</p>
-        <p><b>Classic Account</b> – beginning at $5000 USD</p>
-        <p><b>Premium Account</b> beginning at $20,000 USD</p>
-        <p class="page-main__title">Which platform should you use?</p>
-        <p>There are a variety of different platforms available from Cryptologi to meet the requirements of different traders with different circumstances.</p>
-        <p><b>Criptologi Webtrader</b> - download this popular, world-renowned desktop platform if you predominately trade in crypto currencies. It is both user-friendly and state-of-the-art.</p>
-        <p><b>Criptologi Mobile</b> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
-        <p class="page-main__title">What type of information do you need to give in order to trade?</p>
-        <p>You are requested to give the following information for proof of identity upon registration:</p>
-        <p>A certified, original copy of your passport or ID.</p>
-        <p>A utility bill with proof of your mailing address.</p>
-        <p>You will need to clearly indicate the beneficiary name on the Cryptologi Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
-        <p class="page-main__title">How do you manage your risk?</p>
-        <p class="page-main--pb">The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order stets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
+        <h1>Security</h1>
+        <p class="page-main__about-title">Safety is our topmost Priority</p>
+        <p>The safty and security of  our client's funds and information is something we take really seriously. Our strong security protocols gives our clients to opportunity to secure their accounts</p>
+        <p class="page-main__about--title">What the imortance of securing you account</p>
+        <p>as a result of the various transactions made with real money, when you makes a deposit you place your money in a cryptologic account. This is very important that you can control them. If you don't turn on protection feautures in your account, someone can easily get access to the account and make away with your money.</p>
+        <p class="page-main__about--title">Strong password</p>
+        <p>it is very important to use a password unique to you alone. This maks it immporsible for anyone to steal your money. The password should contain at least a minimu of 8 characterss and it should be comprised of small letters, big letters, digits and sometimes even special character (!, # &) as the case may be.</p>
+        <p class="page-main__about--title">Two factor authentication(2FA)</p>
+        <p>this special feature is available to provide another level of authentication and verification of the right and legal user of an account. With 2FA enabled, you give your account another layer of protection: usually a one time code that can only be sent to your mobile devices.</p>
+        <p class="page-main__about-title">Our site, services and personel</p>
+        <p>every online service and commmunication occur over secured and trusted channels. The various wallets are stored and kept making us of a PGP encryption. No personal of Cryptologi has direct access to any customer's Bitcoin funds. Likewise no one will ask you for the password to your personal account. We run an impressive but yet simple financial and security  auditing. This gives our customer a gurantee that their funds well safe and accounted for. Every staff member pass a background check, they receive qualitative training and are expected to adhere  to each and every of the compny's policy</p>
+        <h1>AML & KYC</h1>
+        <p>Cryotologic exchange is strongly against the act of money laundering and any form of financing terrorism. It consists of</p>
+        <ul>
+          <li>verification of your account: before a payment is carried out, any user or customer that wants to pay in fiat currencies has to verify their account</li>
+          <li>Safety PIN code : a 4 digit code is expected to be set  up during account registration. If our customer service is contacted for  anything, no information would be released  without the PIN code</li>
+          <li>Transfer delay or account blooking : we can block, suspend or deactivate an account in the case where by a crime is suspected</li>
+          <li>Singular user, one account : one person is allowed to own only one account on cryptologi</li>
+        </ul>
+        <p class="page-main--pb">Digital currencies are rapidly changing the financial landscape, and the Luno team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
       </div>
     </div>
   </main>
@@ -72,15 +71,15 @@
           <ul>
             <li><a href="about.html">About Us</a></li>
             <li><a href="careers.html">Careers</a></li>
-            <li><a href="#">Press</a></li>
+            <li><a href="press.html">Press</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="security.html">Security</a></li>
+            <li><a class="page-footer--active">Security</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li><a class="page-footer--active">FAQ</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="legal.html">Legal & Privacy</a></li>
             <li><a href="terms.html">Terms & Conditions</a></li>
             <li><a href="support.html">Support</a></li>
