--- a/assets/templates/crypto/template/careers.html
+++ b/assets/templates/crypto/template/careers.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About Us - Cryptologi</title>
-  <link rel="stylesheet" href="../css/fastyle.css">
+  <link rel="stylesheet" href="../css/astyle.css">
   <link rel="stylesheet" href="../css/adaptivee.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
@@ -42,7 +42,7 @@
         <p class="page-main__about--title">We’re characterized by distinctive efficiency.</p>
         <p>At cryptologi everything we do is geared toward efficiency. This means we don't waste any of our resources. We are very quick in making the right decisions. As a member of this team you are most certain to get right up-to date informations. The kind of relationship that exsist between each and every member is the best there is.</p>
         <h1>Job type</h1>
-        <p class="page-main__about-title">1. Country associate</p>
+        <p class="page-main__careers--title">1. Country associate</p>
         <p>Cryptologi is a top world class cryptocuurency company that operates in more than 40 countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
         <p class="page-main__about--title">What you’ll do</p>
         <ul>
@@ -70,7 +70,7 @@
         <p class="page-main__about-title">Cover Letter:</p>
         <p>Please make sure you submit a cover letter describing why you're interested in Luno and the role and what makes you the right candidate.</p>
         <p>Digital currencies are rapidly changing the financial landscape, and the Luno team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
-        <p class="page-main__about-title">2. Compliance Analyst</p>
+        <p class="page-main__careers--title">2. Compliance Analyst</p>
         <p>Cryptologi is a top world class cryptocuurency company that operates in more than 40 countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
         <p class="page-main__about--title">What you'll do</p>
         <ul>
@@ -86,7 +86,7 @@
           <li>Support external compliance audits</li>
           <li>Respond to law enforcement and money laundering related request</li>
         </ul>
-        <p class="page-main__about-title">What you’ll need</p>
+        <p class="page-main__about--title">What you’ll need</p>
         <ul>
           <li>University degree from a top tertiary institution</li>
           <li>2-3 years work experience</li>
@@ -99,7 +99,7 @@
           <li>Familiarity with Bitcoin and other crypto-currencies will be highly advantageous</li>
         </ul>
         <p>Digital currencies are rapidly changing the financial landscape, and the Luno team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
-        <p class="page-main__about-title">3. Senior Software Engineer</p>
+        <p class="page-main__careers--title">3. Senior Software Engineer</p>
         <p>Cryptologi is a top world class cryptocuurency company that operates in more than 40 countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
         <p class="page-main__about--title">What you'll do</p>
         <ul>
@@ -109,7 +109,7 @@
           <li>Work on diverse set of projects including web frontends, internal systems, trading, APIs, security, mobile apps</li>
           <li>Write impactful code that directly affects users, the company and the Bitcoin ecosystem</li>
         </ul>
-        <p class="page-main__about-title">What you’ll need</p>
+        <p class="page-main__about--title">What you’ll need</p>
         <ul>
           <li>A work permit for South Africa if you are not a South African citizen</li>
           <li>A solid foundation in computer science in areas such as algorithms, data structures, distributed computing, software design</li>
