--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FAQ - Cryptologi</title>
-  <link rel="stylesheet" href="../css/fastyle.css">
+  <link rel="stylesheet" href="../css/astyle.css">
   <link rel="stylesheet" href="../css/adaptivee.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
