--- a/assets/templates/crypto/template/security.html
+++ b/assets/templates/crypto/template/security.html
@@ -34,16 +34,16 @@
     <div class="container">
       <div class="container__adv  container__adv--pm">
         <h1>Security</h1>
-        <p class="page-main__about-title">Safety is our topmost Priority</p>
+        <p class="page-main__about--title">Safety is our topmost Priority</p>
         <p>The safty and security of  our client's funds and information is something we take really seriously. Our strong security protocols gives our clients to opportunity to secure their accounts</p>
         <p class="page-main__about--title">What the imortance of securing you account</p>
-        <p>as a result of the various transactions made with real money, when you makes a deposit you place your money in a cryptologic account. This is very important that you can control them. If you don't turn on protection feautures in your account, someone can easily get access to the account and make away with your money.</p>
+        <p>As a result of the various transactions made with real money, when you makes a deposit you place your money in a cryptologic account. This is very important that you can control them. If you don't turn on protection feautures in your account, someone can easily get access to the account and make away with your money.</p>
         <p class="page-main__about--title">Strong password</p>
-        <p>it is very important to use a password unique to you alone. This maks it immporsible for anyone to steal your money. The password should contain at least a minimu of 8 characterss and it should be comprised of small letters, big letters, digits and sometimes even special character (!, # &) as the case may be.</p>
+        <p>It is very important to use a password unique to you alone. This maks it immporsible for anyone to steal your money. The password should contain at least a minimu of 8 characterss and it should be comprised of small letters, big letters, digits and sometimes even special character (!, # &) as the case may be.</p>
         <p class="page-main__about--title">Two factor authentication(2FA)</p>
-        <p>this special feature is available to provide another level of authentication and verification of the right and legal user of an account. With 2FA enabled, you give your account another layer of protection: usually a one time code that can only be sent to your mobile devices.</p>
-        <p class="page-main__about-title">Our site, services and personel</p>
-        <p>every online service and commmunication occur over secured and trusted channels. The various wallets are stored and kept making us of a PGP encryption. No personal of Cryptologi has direct access to any customer's Bitcoin funds. Likewise no one will ask you for the password to your personal account. We run an impressive but yet simple financial and security  auditing. This gives our customer a gurantee that their funds well safe and accounted for. Every staff member pass a background check, they receive qualitative training and are expected to adhere  to each and every of the compny's policy</p>
+        <p>This special feature is available to provide another level of authentication and verification of the right and legal user of an account. With 2FA enabled, you give your account another layer of protection: usually a one time code that can only be sent to your mobile devices.</p>
+        <p class="page-main__about--title">Our site, services and personel</p>
+        <p>Every online service and commmunication occur over secured and trusted channels. The various wallets are stored and kept making us of a PGP encryption. No personal of Cryptologi has direct access to any customer's Bitcoin funds. Likewise no one will ask you for the password to your personal account. We run an impressive but yet simple financial and security  auditing. This gives our customer a gurantee that their funds well safe and accounted for. Every staff member pass a background check, they receive qualitative training and are expected to adhere  to each and every of the compny's policy.</p>
         <h1>AML & KYC</h1>
         <p>Cryotologic exchange is strongly against the act of money laundering and any form of financing terrorism. It consists of</p>
         <ul>
