--- a/assets/templates/miner/sass/blocks/tabs.scss
+++ b/assets/templates/miner/sass/blocks/tabs.scss
@@ -36,6 +36,10 @@
   }
 }
 
+.tabs__left {
+  width: 600px;
+}
+
 @media screen and ($tablet-widths) {
 
 }
@@ -45,5 +49,10 @@
     flex-direction: column;
     align-items: center;
     text-align: justify;
+  }
+  
+  .tabs__left {
+    width: auto;
+    margin-bottom: 40px;
   }
 }
