--- a/assets/templates/miner/index.html
+++ b/assets/templates/miner/index.html
@@ -102,13 +102,6 @@
         <div class="header-sub__right">
           <b>Bitcoin is safe</b>
           <p>Bitcoin miners help keep the Bitcoin network secure by approving transactions. Mining is an important and integral part of Bitcoin that guarantees fairness while keeping the Bitcoin network stable, safe and secure. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain.</p>
-          
-          <!-- <b>Links</b>
-          <ul>
-            <li><a href="#">We Use Coins</a> - Learn all about crypto-currency.</li>
-            <li><a href="#">Bitcoin News</a> - Where the Bitcoin community gets news.</li>
-            <li><a href="#">Bitcoin Knowledge Podcast</a> - Interviews with top people in Bitcoin.</li>
-          </ul> -->
         </div>
       </div>
     </div>
@@ -181,8 +174,8 @@
       <div class="tabs__flex">
         <div class="tabs__left">
           <p>What is blockchain?</p>
-          <p>Bitcoin mining is the process by which transactions are verified<br>and added to the public ledger, known as the block chain,<br>and also the means through which new bitcoin are released.<br>Anyone with access to the internet and suitable hardware can participate in mining. </p>
-          <p>The mining process involves compiling recent transactions<br>into blocks and trying to solve a computationally difficult puzzle.<br>The participant who first solves the puzzle gets to place the next<br>block on the block chain and claim the rewards. The rewards,<br>which incentivize mining, are both the transaction fees associated<br>with the transactions compiled in the block as well as newly released bitcoin.</p>
+          <p>Bitcoin mining is the process by which transactions are verified and added to the public ledger, known as the block chain, and also the means through which new bitcoin are released. Anyone with access to the internet and suitable hardware can participate in mining. </p>
+          <p>The mining process involves compiling recent transactions into blocks and trying to solve a computationally difficult puzzle. The participant who first solves the puzzle gets to place the next block on the block chain and claim the rewards. The rewards, which incentivize mining, are both the transaction fees associated with the transactions compiled in the block as well as newly released bitcoin.</p>
         </div>
         <div class="tabs__right">
           <!-- <ul>
@@ -292,17 +285,20 @@
   <section class="edge">
     <img src="img/edge-img.png" alt="">
   </section>
-  <section class="cloud">
+  <section class="cloud"></section>
+  <section class="cloud-sub">
     <div class="container">
-      <div class="cloud__flex">
-        <div class="cloud__left">
+      <div class="cloud-sub__flex">
+        <div class="cloud-sub__title">
+          <p>What is<br>bitcoin cloudmining?</p>
+        </div>
+        <div class="cloud-sub__left">
           <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place.</p>
           <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. This ledger of past transactions is called the block chain as it is a chain of blocks. The block chain serves to confirm transactions to the rest of the network as having taken place.</p>
         </div>
-        <!-- <div class="cloud__middle">
-          <p class="cloud__title">What is<br>Bitcoin<br>CLOUDMining?</p>
+        <div class="cloud-sub__middle">
           <p>Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain. Bitcoin mining is the process of adding transaction records to Bitcoin's public ledger of past transactions or blockchain.  </p>
-        </div> -->
+        </div>
         <!-- <div class="cloud__right">
           <img src="img/cloud-human.png" alt="" width="600">
         </div> -->
@@ -336,6 +332,10 @@
           </ul>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="why-sub">
+    <div class="container">
       <p>Further explanation of 'Bitcoin Mining' The number of new bitcoin released with each mined block is called the block reward. The block reward is halved every 210,000 blocks, or roughly every 4 years.  The block reward started at 50 in 2009, is now 25 in 2014, and will continue to decrease.  This diminishing block reward will result in a total release of bitcoin that approaches 21 million. How hard are the puzzles involved in mining? Well, that depends on how much effort is being put into mining across the network. The difficulty of the mining can be adjusted, and is adjusted by the protocol every 2016 blocks, or roughly every 2 weeks.  The difficulty adjusts itself with the aim of keeping the rate of block discovery constant.  Thus if more computational power is employed in mining, then the difficulty will adjust upwards to make mining harder.  And if computational power is taken off of the network, the opposite happens.  The difficulty adjusts downward to make mining easier.</p>
       <b>What is Proof of Work?</b>
       <p>A proof of work is a piece of data which was difficult, time-consuming and difficult to produce so as to satisfy some certain requirements. It must be trivial to check whether data satisfies said requirements.</p>
