--- a/assets/templates/miner/sass/blocks/cloud.scss
+++ b/assets/templates/miner/sass/blocks/cloud.scss
@@ -1,65 +1,67 @@
 .cloud {
-  min-height: 830px;
-  margin-top: -110px;
-  background: url('../img/cloud-bg-t.png');
+  min-height: 560px;
+  margin-top: -160px;
+  background: url('../img/cloud-bg.png') no-repeat top;
   // background-size: cover;
 }
 
-.cloud__flex {
-  // display: flex;
+.cloud-sub__flex {
+  display: flex;
   justify-content: space-around;
-  padding-top: 150px;
   padding-bottom: 100px;
 }
 
-.cloud__left {
+.cloud-sub__left {
   width: 450px;
-  margin-top: 150px;
   // margin-right: 50px;
   font-size: 18px;
   color: rgba(0, 0, 0, 0.8);
 }
 
-.cloud__middle {
+.cloud-sub__middle {
   width: 500px;
   font-size: 18px;
   color: rgba(0, 0, 0, 0.8);
 }
 
-.cloud__title {
-  margin-top: 20px;
-  padding: 30px;
-  color: #fff;
-  font-size: 40px;
-  font-weight: bold;
-  background: #000;
-  text-transform: uppercase;
+.cloud-sub__title {
+  display: none;
 }
 
 @media screen and ($tablet-widths) {
-  .cloud {
-    margin-top: -150px;
-    background: url('../img/cloud-bg.png');
-  }
+
 }
 
 @media screen and ($mobile-widths) {
-  .cloud__flex {
+  .cloud {
+    display: none;
+  }
+  
+  .cloud-sub__flex {
     flex-direction: column;
     justify-content: center;
-    margin-top: 140px;
-    padding-top: 130px;
+    padding-bottom: 10px;
+    margin-top: 40px;
     text-align: justify;
   }
   
-  .cloud__title {
+  .cloud-sub__title {
+    display: block;
     padding: 30px;
+    color: #fff;
     font-size: 30px;
+    font-weight: bold;
     text-align: center;
+    text-transform: uppercase;
+    background: #000;
+    
+    & p {
+      margin: 0;
+    }
   }
   
-  .cloud__left,
-  .cloud__middle {
+  .cloud-sub__left,
+  .cloud-sub__middle {
     width: auto;
   }
 }
