--- a/assets/templates/miner/sass/blocks/page-header.scss
+++ b/assets/templates/miner/sass/blocks/page-header.scss
@@ -175,7 +175,7 @@
 
 @media screen and ($mobile-widths) {
   .page-header {
-    height: 1183px;
+    height: 1000px;
     background: #0f0e12 url('../img/header-bg.png') no-repeat top;
     // background-size: cover;
     
@@ -209,7 +209,7 @@
   
   .page-header__offer {
     flex-direction: column;
-    // padding-top: 200px;
+    margin-top: 100px;
   }
   
   .page-header__item {
