--- a/assets/templates/crypto/template/login.html
+++ b/assets/templates/crypto/template/login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Registration - CryptoLogi</title>
   <link rel="stylesheet" href="../css/astyle.css">
-  <link rel="stylesheet" href="../css/adaptivee.css">
+  <link rel="stylesheet" href="../css/adaptivi.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body class="form__body">
