--- a/assets/templates/miner/sass/blocks/mining.scss
+++ b/assets/templates/miner/sass/blocks/mining.scss
@@ -7,6 +7,8 @@
 @media screen and ($tablet-widths) {
   .mining {
     min-height: 600px;
+    background: url('../img/mining-bg-m.png') no-repeat top;
+    // background-size: cover;
   }
 }
 
