--- a/assets/templates/crypto/template/support.html
+++ b/assets/templates/crypto/template/support.html
@@ -34,13 +34,21 @@
     <div class="container">
       <div class="container__adv  container__adv--pm">
         <h1>Support</h1>
-        <form action="" class="form__support">
-          <input type="text" placeholder="Full Name">
-          <input type="email" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <textarea name="name" rows="4" cols="80"></textarea>
-          <button type="submit" value="Submit">Submit</button>
-        </form>
+        <div class="form__flex">
+          <form action="" class="form__support">
+            <input type="text" placeholder="Full Name">
+            <input type="email" placeholder="Email">
+            <input type="text" placeholder="Subject">
+            <textarea name="name" rows="4" cols="80"></textarea>
+            <button type="submit" value="Submit">Submit</button>
+          </form>
+          <div class="form__contact">
+            <p>Support email: support@cryptologi.com</p>
+            <p>Support phone: +35722000974</p>
+            <p>Monday to Friday</p>
+            <p class="page-main--pb">between 10:00 to 18:00 GMT</p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
