--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -17,7 +17,7 @@
             <div class="page-header__logo">
               <a href="#">
                 <img class="page-header__logo-b" src="img/logo.png" alt="CryptoLogic">
-                <img class="page-header__logo-s" src="img/logo-s.png" alt="CryptoLogic">
+                <!-- <img class="page-header__logo-s" src="img/logo-s.png" alt="CryptoLogic"> -->
               </a>
             </div>
             <div class="page-header__main-nav">
