--- a/assets/templates/crypto/css/astyle.css
+++ b/assets/templates/crypto/css/astyle.css
@@ -635,8 +635,8 @@ form button:hover {
 
 .page-main h1 {
   font-size: 30px;
+	text-transform: uppercase;
 }
-
 
 .page-main--about,
 .page-main--faq,
@@ -648,7 +648,7 @@ form button:hover {
 .page-main--careers h1 {
   margin-top: 0;
   padding-top: 60px;
-  text-transform: uppercase;
+  
 }
 
 .page-main--contact {
@@ -768,6 +768,7 @@ form button:hover {
 }
 
 .form__support input {
+	width: auto;
 	margin-left: 0;
 	padding: 10px 20px;
 	color: #fff;
@@ -782,7 +783,7 @@ form button:hover {
 }
 
 .form__support textarea {
-	width: 400px;
+	/* width: 400px; */
 	padding: 10px 20px;
 	color: #fff;
 	font-size: 18px;
@@ -799,6 +800,15 @@ form button:hover {
 	font-size: 18px;
 }
 
+.form__flex {
+	display: flex;
+	justify-content: flex-start;
+}
+
+.form__contact {
+	margin-top: 60px;
+	margin-left: 80px;
+}
 
 
 
