--- a/assets/templates/crypto/template/contact.html
+++ b/assets/templates/crypto/template/contact.html
@@ -35,8 +35,9 @@
       <div class="container__adv  container__adv--pm">
         <h1>Contact</h1>
         <p>Support email: support@cryptologi.com</p>
-        <p>Support phone: +357</p>
-        <p class="page-main--pb">Monday to Friday between 10:00 to 18:00 GMT</p>
+        <p>Support phone: +35722000974</p>
+        <p>Monday to Friday</p>
+        <p class="page-main--pb">between 10:00 to 18:00 GMT</p>
       </div>
     </div>
   </main>
