--- a/assets/templates/crypto/template/support.html
+++ b/assets/templates/crypto/template/support.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/astyle.css">
   <link rel="stylesheet" href="../css/adaptivi.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
   <header class="page-header  page-header--about">
@@ -40,6 +41,7 @@
             <input type="email" placeholder="Email">
             <input type="text" placeholder="Subject">
             <textarea name="name" rows="4" cols="80"></textarea>
+            <div class="g-recaptcha" data-sitekey="6LePDD4UAAAAAH2emPt1yfP329k68a_d8fdEHZlE"></div>
             <button type="submit" value="Submit">Submit</button>
           </form>
           <div class="form__contact">
