--- a/assets/templates/crypto/template/form.html
+++ b/assets/templates/crypto/template/form.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Login - CryptoLogi</title>
-  <link rel="stylesheet" href="../css/astyle.css">
-  <link rel="stylesheet" href="../css/adaptivi.css">
+  <link rel="stylesheet" href="../css/styll.css">
+  <link rel="stylesheet" href="../css/adaptiv.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body class="form__body">
